Make gpg signature stuff optional.
Unfortunately, it fails most of the time.

--- a/roles/one_password_cli/defaults/main.yml
+++ b/roles/one_password_cli/defaults/main.yml
@@ -2,4 +2,5 @@
 one_password_cli_binary_directory: "/usr/local/bin"
 one_password_cli_force_download: false
 one_password_cli_force_install: false
+one_password_cli_verify_gpg_signature: false
 one_password_cli_version: "2.30.3"
