Migrate xquartz to a role.
It turns out that they no longer distribute XQuartz in a dmg. It's
just a package now.

--- a/tasks/install_apps.yml
+++ b/tasks/install_apps.yml
@@ -39,6 +39,10 @@
   include_role:
     name: docker
 
+- name: Install XQuartz
+  include_role:
+    name: xquartz
+
 - name: Download and install app from disk images
   include_role:
     name: install_from_dmg
