Move versions to the role defaults.
Updated relevant versions as well.

Affects iterm2, macports, node, R, terraform, vlc, xact.

I think it makes way more sense to keep role variables with the roles,
and to move more of this stuff to specific roles over time.

It's still possible to override the default using a variable (here,
command line, whatever). But the role should work out of the box.

--- a/roles/node/tasks/main.yml
+++ b/roles/node/tasks/main.yml
@@ -1,4 +1,7 @@
 # Install node via nvm.
+#  https://github.com/nvm-sh/nvm
+#
+# This installs nvm by cloning its GitHub repository. It then uses nvm to install the requested node version.
 ---
 - set_fact:
     node_nvm_home: "{{ '~/.nvm' | expanduser }}"
