--- a/tasks/install_apps.yml
+++ b/tasks/install_apps.yml
@@ -43,6 +43,10 @@
   include_role:
     name: xquartz
 
+- name: Install Skim
+  include_role:
+    name: skim
+
 - name: Download and install app from disk images
   include_role:
     name: install_from_dmg
