Add picard role.

--- a/tasks/install_apps.yml
+++ b/tasks/install_apps.yml
@@ -47,6 +47,10 @@
   include_role:
     name: skim
 
+- name: Install MusicBrainz Picard
+  include_role:
+    name: picard
+
 - name: Download and install app from disk images
   include_role:
     name: install_from_dmg
