Add node arg spec and remove special yarn support.
Yarn isn't really used as much these days. There was never really a
good reason to support it specially anyhow, since it could easily be
installed via node_global_modules_to_install if desired.

Add node_default_version, separate setting up default node env from
installing any one node version.

This means it's now possible to include node multiple times to install
multiple versions, if needed.

--- a/roles/node/defaults/main.yml
+++ b/roles/node/defaults/main.yml
@@ -1,11 +1,6 @@
 ---
-# Version of node to install.
-node_version: "22.12.0"
-
-# Version of node to install. None => use the default that came with node. 'latest' => install latest version.
+# Version of npm to install. None => use the default that came with node. 'latest' => install latest version.
 node_npm_version:
-# Version of yarn to install. None => don't install any. 'latest' => install latest version.
-node_yarn_version:
 
 # List of global modules to install.
 # This variable must contain a list of items, each of which nas a name and optional version. The module with the given
