--- a/vars/versions.yml
+++ b/vars/versions.yml
@@ -3,3 +3,6 @@
 ---
 gpgtools_version: "2023.3"
 visualvm_version: "2.1.10"
+
+# Version of node to install and make the default (via nvm)
+setup_node_version: "22.12.0"
