Add aws_cli arg spec.

--- a/roles/aws_cli/tasks/main.yml
+++ b/roles/aws_cli/tasks/main.yml
@@ -3,6 +3,9 @@
     path: /usr/local/bin/aws
   register: throwaway
 
+- set_fact:
+    aws_cli_package_name: AWSCLIV2.pkg
+
 - name: Download AWS CLI installer
   get_url:
     url: "https://awscli.amazonaws.com/{{ aws_cli_package_name }}"
