--- a/roles/terraform/tasks/main.yml
+++ b/roles/terraform/tasks/main.yml
@@ -21,5 +21,5 @@
     - name: Install terraform
       unarchive:
         src: "{{ downloads }}/terraform.zip"
-        dest: "/usr/local/bin"
+        dest: "{{ terraform_binary_directory }}"
       become: true
