Rename terraform -> hashicorp_terraform. Bump version.

--- a/tasks/install_apps.yml
+++ b/tasks/install_apps.yml
@@ -13,7 +13,7 @@
 
 - name: Install Terraform
   include_role:
-    name: terraform
+    name: hashicorp_terraform
 
 - name: Install steamcmd
   include_role:
