--- a/vars/node_global_modules.yml
+++ b/vars/node_global_modules.yml
@@ -1,6 +1,6 @@
 # Node modules to install globally.
 #
-# This variable must contain a list of items, each of which nas a name and optional version. The module with the given
+# This variable must contain a list of items, each of which has a name and optional version. The module with the given
 # name and version will be installed by the `node` role.
 #   name is required.
 #   version is optional. If omitted, the default is `latest`.
