--- a/roles/proton_vpn/tasks/main.yml
+++ b/roles/proton_vpn/tasks/main.yml
@@ -1,8 +1,10 @@
+# Install ProtonVPN.
+#  https://protonvpn.com/
 ---
 - set_fact:
     proton_vpn_dmg_url: "https://vpn.protondownload.com/download/macos/{{ proton_vpn_version }}/ProtonVPN_mac_v{{ proton_vpn_version }}.dmg"
 
-- name: Download and install Proton VPN
+- name: Download and install ProtonVPN
   include_role:
     name: install_from_dmg
   vars:
