Add firefox role to install_apps tasks.

--- a/tasks/install_apps.yml
+++ b/tasks/install_apps.yml
@@ -59,6 +59,10 @@
   include_role:
     name: discord
 
+- name: Install Firefox
+  include_role:
+    name: firefox
+
 - name: Download and install app from disk images
   include_role:
     name: install_from_dmg
