Add chrome role to install_apps tasks.

--- a/tasks/install_apps.yml
+++ b/tasks/install_apps.yml
@@ -63,6 +63,10 @@
   include_role:
     name: firefox
 
+- name: Install Chrome
+  include_role:
+    name: chrome
+
 - name: Download and install app from disk images
   include_role:
     name: install_from_dmg
