Quote the MacTeX url.

--- a/roles/mactex/tasks/main.yml
+++ b/roles/mactex/tasks/main.yml
@@ -9,7 +9,7 @@
   block:
     - name: Download MacTeX
       get_url:
-        url: https://mirror.ctan.org/systems/mac/mactex/MacTeX.pkg
+        url: "https://mirror.ctan.org/systems/mac/mactex/MacTeX.pkg"
         dest: "{{ downloads }}/mactex.pkg"
         force: "{{ mactex_force_download }}"
         mode: u=rw
