--- a/vars/ports.yml
+++ b/vars/ports.yml
@@ -47,7 +47,8 @@ ports_to_install:
     pstree:
     ripgrep:
     shellcheck:
-    siege:
+# siege fails to compile. The port seems to be unmaintained ATM.
+#    siege:
     tealdeer:
     texinfo:
     the_silver_searcher:
