emacs: Add emacs_git_version.
So we're not always building from main/HEAD, which is sometimes
broken.

Currently broken, but older versions don't seem to fix it. Looks like
a tooling issue of some kind.

--- a/roles/emacs/defaults/main.yml
+++ b/roles/emacs/defaults/main.yml
@@ -2,4 +2,5 @@
 emacs_bootstrap: false
 emacs_distclean: false
 emacs_extraclean: true
+emacs_git_version: "master"
 emacs_src_dir: "{{ '~/src/emacs' | expanduser }}"
