visualvm: Add some comments to the tasks, including website.

--- a/roles/visualvm/tasks/main.yml
+++ b/roles/visualvm/tasks/main.yml
@@ -1,3 +1,5 @@
+# Install VisualVM
+#  https://visualvm.github.io/
 ---
 - set_fact:
     visualvm_dmg_url: "https://github.com/visualvm/visualvm.src/releases/download/{{ visualvm_version }}/VisualVM_{{ visualvm_version | replace('.', '') }}.dmg"
