--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -55,13 +55,12 @@
     state: directory
     mode: u=rwx,g=rx,o=rx
 
-# TODO this no longer seems to work on 15.5/arm. It breaks code signing, and the app won't start.
 # From a handy tip here
 # https://www.reddit.com/r/emacs/comments/bclyyc/building_emacs_from_source_on_macos/
-#- name: Make emacs standalone
-#  command: /usr/bin/python3 -m macholib standalone nextstep/Emacs.app
-#  args:
-#    chdir: "{{ emacs_src_dir }}"
+- name: Make emacs standalone
+  command: /usr/bin/python3 -m macholib standalone nextstep/Emacs.app
+  args:
+    chdir: "{{ emacs_src_dir }}"
 
 - name: Copy emacs to /Applications
   command: cp -af nextstep/Emacs.app /Applications/
