Replace var/task for gpg tools with role.
Not going to include this role in install_apps.yml. I don't use this
anymore. It seems as though the devs aren't really keeping it up to
date, either.

--- a/run-role-playbook.yml
+++ b/run-role-playbook.yml
@@ -10,9 +10,9 @@
     - vars/fonts.yml
     - vars/launchd.yml
     - vars/mas.yml
+    - vars/node.yml
     - vars/pip.yml
     - vars/ports.yml
-    - vars/versions.yml
   tasks:
     - import_tasks: tasks/preliminaries.yml
 
