--- a/setup-playbook.yml
+++ b/setup-playbook.yml
@@ -9,10 +9,9 @@
     - vars/fonts.yml
     - vars/launchd.yml
     - vars/mas.yml
-    - vars/node_global_modules.yml
+    - vars/node.yml
     - vars/pip.yml
     - vars/ports.yml
-    - vars/versions.yml
   tasks:
     - name: Install python modules
       import_tasks: tasks/pip.yml
